[package]
name = "backend"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "backend"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cardano-serialization-lib = "9.1.2"
bip39 = "1.0.1"
envconfig = "0.10.0"
hex = "0.4.3"
cbor_event = "2.1.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.11"
actix-web = "4.0.0-beta.5"
actix-cors = "0.6.0-beta.2"
tokio = { version = "1.4.0", features = ["time"] }
chrono = "0.4"
reqwest = "0.11.4"
dotenv = "0.15.0"
lazy_static = "1.4.0"
sqlx = { version = "0.5.6", features = ["postgres", "runtime-tokio-rustls", "bigdecimal"]}
bigdecimal = "0.3.0"
tokio-stream = "0.1.7"
